Fix links distance on mobile for SEO

--- a/app/src/styles/layout/_layout.scss
+++ b/app/src/styles/layout/_layout.scss
@@ -17,6 +17,7 @@
 
     a {
       text-decoration: none;
+      margin-bottom: 1rem;
     }
 
     h1.title {
@@ -69,7 +70,7 @@
 
     .slogan {
       font-size: 1.2rem;
-      margin-top: 2rem;
+      margin-top: 1rem;
     }
   }
 }
